fix: reduce log spam in upnp/jsonrpc module